# housing-market-insights

./: .env.example  .gitignore  README.md  app.py  config.py  helpers.py  pyproject.toml  requirements.txt
app_data/aggregate_data/: aggregate_metrics_all.parquet  aggregate_metrics_metro.parquet
app_data/cbsa_data/: active_listing_count.parquet  average_listing_price.parquet  demand_score.parquet  median_days_on_market.parquet  median_listing_price.parquet  median_listing_price_per_sqft.parquet  median_square_feet.parquet  new_listing_count.parquet  pending_listing_count.parquet  price_decrease_count.parquet  price_decrease_ratio.parquet  price_increase_count.parquet  price_increase_ratio.parquet  supply_score.parquet
app_data/metadata/: cbsa_metadata.parquet  state_fips_codes.csv
assets/: styles.css
data_pipeline/: __init__.py  fetch_latest_fred_data.py  pipeline_config.py  process_latest_fred_data.py  run_pipeline.py  update_aggregates.py
data_pipeline/utils/: __init__.py  cbsa_utils.py  date_utils.py  fred_api_client.py  logging_utils.py  metric_transformers.py  path_utils.py  retry_utils.py
geometries/parquet/: cbsa_geometries.parquet
geometries/state_geometries/: cb_2023_us_state_20m.json
metadata/: base_cbsa_codes.txt  supplementary_cbsa_codes.txt
